# MachinesEnBerekenbaarheid

./: .gitignore  README.md
code/: CMakeLists.txt  bake_project.py  baker  baker.py  build_boost.sh  loadXML.xml  saveXML.xml  test  test.xml  wtf.xml
code/Core/: backtrace_core.sh  bake_me.py  core  core.cpp  loadXML.xml  lsys_stoch_dragon.xml  lsys_stoch_tree.xml  output.py  run_core.sh  turtleXML.xml  turtle_graphics.py
code/MBExec/: MBExec  MBExec.cpp  MBExec.d
code/MBLib/: .cproject  .project  CFG.cpp  CFG.d  CFG.hpp  cnf
code/MBLib/CFG/: CFG.cpp  CFG.hpp  CFG.test
code/MBLib/CNF/: .cproject  CNF.cpp  CNF.d  CNF.hpp  bake_me.py  main.cpp  main.d
code/MBLib/CYK/: CYK.hpp
code/MBLib/PDA/: PDA.hpp
code/MBLib/common/: common.cpp  common.hpp  constants.cpp  constants.hpp  sets.hpp
code/MBLib/new_CFG/: CFG.cpp  CFG.hpp  CFG.test  cs_rule.hpp  s_rule.hpp
code/NGLib/common/: s_rule.hpp
code/NGLib/exceptions/: exceptions.hpp
code/NGLib/generator/: generator.cpp  generator.hpp
code/NGLib/outputter/: outputter.cpp  outputter.hpp
code/NGLib/python_out/: bake_me.py  output.py  python_outputter.cpp  python_outputter.hpp
code/NGLib/replacor/: context_replacor.hpp  normal_replacor.hpp  replacor.cpp  replacor.hpp  stochastic_replacor.hpp
code/NGLib/teacher/: teacher.hpp
code/NGLib/tree/: tree.hpp
code/Teach/: teach.cpp
code/evert_exec/: main  main.cpp
code/libs/boost/: Makefile  b2  project-config.jam  project-config.jam.2  user-config.jam
code/libs/python3/: Makefile.pre  config.status  platform  pyconfig.h
code/libs/tinyxml/: tinyxml.d  tinyxmlerror.d  tinyxmlparser.d
code/src/: expressie  expression_cfg.xml  expressions.xml  expressions_2.xml  expressions_reset.xml  test
code/src/Core/: core.cxx  lsys_stoch_tree.xml  output.py  (+2 more)
code/xmls/: big_context.xml  expressions.xml  expressions_second.xml  intermediate.xml  loadXML.xml  lsys_stoch_tree.xml  saveXML.xml  test  turtle_graphics.py
(+208 files in other folders)
